Don't fail on duplicated content field filters
Set.of() throws a runtime exception if it encounters duplicated elements.