@@ -24,8 +24,8 @@ import org.elasticsearch.xcontent.XContentType;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Map;
-import java.util.Set;
 import java.util.function.Function;
 
 /**
@@ -73,8 +73,8 @@ public interface XContentFieldFilter {
             };
         } else {
             final XContentParserConfiguration parserConfig = XContentParserConfiguration.EMPTY.withFiltering(
-                Set.of(includes),
-                Set.of(excludes),
+                new HashSet<>(Arrays.asList(includes)),
+                new HashSet<>(Arrays.asList(excludes)),
                 true
             );
             return (originalSource, contentType) -> {
